--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/css/recipes.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/recipes.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
@@ -21,80 +21,104 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>Flour & Grains</h2>
-          <fieldset>
-            <input type="checkbox" name="rice" id="rice" value="rice">
-            <label for="rice">Rice</label></br>
-            <input type="checkbox" name="flour" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
-            <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
-            <input type="checkbox" name="maizeFlour" id="maizeFlour" value="maizeFlour">
-            <label for="maizeFlour">MaizeFlour</label></br>
-            <input type="checkbox" name="pasta" id="pasta" value="pasta">
-            <label for="pasta">Pasta</label></br>
-            <input type="checkbox" name="beans" id="beans" value="beans">
-            <label for="beans">Beans</label></br>
-            <input type="checkbox" name="lentils" id="lentils" value="lentils">
-            <label for="lentils">Lentils</label></br>
-            <input type="checkbox" name="blackbeans" id="blackbeans" value="blackbeans">
-            <label for="blackbeans">Black Beans</label>
-          </fieldset>
+          <div class="card">
+            <div class="card-title">
+              <h2>Flour & Grains</h2>
+            </div>
+            <div class="card-body">
+              <fieldset>
+                <input type="checkbox" name="rice" id="rice" value="rice">
+                <label for="rice">Rice</label></br>
+                <input type="checkbox" name="flour" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
+                <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
+                <input type="checkbox" name="maizeFlour" id="maizeFlour" value="maizeFlour">
+                <label for="maizeFlour">MaizeFlour</label></br>
+                <input type="checkbox" name="pasta" id="pasta" value="pasta">
+                <label for="pasta">Pasta</label></br>
+                <input type="checkbox" name="beans" id="beans" value="beans">
+                <label for="beans">Beans</label></br>
+                <input type="checkbox" name="lentils" id="lentils" value="lentils">
+                <label for="lentils">Lentils</label></br>
+                <input type="checkbox" name="blackbeans" id="blackbeans" value="blackbeans">
+                <label for="blackbeans">Black Beans</label>
+              </fieldset>
+            </div>
+          </div>
         </div>
         <div class="col-md-6">
-          <h2>Dairy</h2>
-          <fieldset>
-            <input type="checkbox" name="milk" id="milk" value="milk">
-            <label for="milk">Milk</label></br>
-            <input type="checkbox" name="eggs" id="eggs" value="eggs">
-            <label for="eggs">Eggs</label></br>
-            <input type="checkbox" name="cheddar" id="cheddar" value="cheddar">
-            <label for="cheddar">Cheddar</label></br>
-            <input type="checkbox" name="parmesan" id="parmesan" value="parmesan">
-            <label for="parmesan">Parmesan</label></br>
-            <input type="checkbox" name="yogurt" id="yogurt" value="yogurt">
-            <label for="yogurt">Yogurt</label></br>
-            <input type="checkbox" name="coconutMilk" id="coconutMilk" value="coconutMilk">
-            <label for="coconutMilk">Coconut Milk</label></br>
-          </fieldset>
+          <div class="card">
+            <div class="card-title">
+              <h2>Dairy</h2>
+            </div>
+            <div class="card-body">
+              <fieldset>
+                <input type="checkbox" name="milk" id="milk" value="milk">
+                <label for="milk">Milk</label></br>
+                <input type="checkbox" name="eggs" id="eggs" value="eggs">
+                <label for="eggs">Eggs</label></br>
+                <input type="checkbox" name="cheddar" id="cheddar" value="cheddar">
+                <label for="cheddar">Cheddar</label></br>
+                <input type="checkbox" name="parmesan" id="parmesan" value="parmesan">
+                <label for="parmesan">Parmesan</label></br>
+                <input type="checkbox" name="yogurt" id="yogurt" value="yogurt">
+                <label for="yogurt">Yogurt</label></br>
+                <input type="checkbox" name="coconutMilk" id="coconutMilk" value="coconutMilk">
+                <label for="coconutMilk">Coconut Milk</label></br>
+              </fieldset>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>Vegetables</h2>
-          <fieldset>
-            <input type="checkbox" name="tomatoes" id="tomatoes" value="tomatoes">
-            <label for="tomatoes">Tomatoes</label></br>
-            <input type="checkbox" name="cabbage" id="cabbage" value="cabbage">
-            <label for="cabbage">Cabbage</label></br>
-            <input type="checkbox" name="brocolli" id="brocolli" value="brocolli">
-            <label for="brocolli">Brocolli</label></br>
-            <input type="checkbox" name="cauliflower" id="cauliflower" value="cauliflower">
-            <label for="cauliflower">Cauliflower</label></br>
-            <input type="checkbox" name="spinach" id="spinach" value="spinach">
-            <label for="spinach">Spinach</label></br>
-            <input type="checkbox" name="sukuma" id="sukuma" value="sukuma">
-            <label for="sukuma">Sukuma</label></br>
-            <input type="checkbox" name="onion" id="onion" value="onion">
-            <label for="onion">Onion</label></br>
-            <input type="checkbox" name="garlic" id="garlic" value="garlic">
-            <label for="garlic">Garlic</label></br>
-            <input type="checkbox" name="tangawizi" id="tangawizi" value="tangawizi">
-            <label for="tangawizi">Tangawizi</label></br>
-          </fieldset>
+          <div class="card">
+            <div class="card-title">
+              <h2>Vegetables</h2>
+            </div>
+            <div class="card-body">
+              <fieldset>
+                <input type="checkbox" name="tomatoes" id="tomatoes" value="tomatoes">
+                <label for="tomatoes">Tomatoes</label></br>
+                <input type="checkbox" name="cabbage" id="cabbage" value="cabbage">
+                <label for="cabbage">Cabbage</label></br>
+                <input type="checkbox" name="brocolli" id="brocolli" value="brocolli">
+                <label for="brocolli">Brocolli</label></br>
+                <input type="checkbox" name="cauliflower" id="cauliflower" value="cauliflower">
+                <label for="cauliflower">Cauliflower</label></br>
+                <input type="checkbox" name="spinach" id="spinach" value="spinach">
+                <label for="spinach">Spinach</label></br>
+                <input type="checkbox" name="sukuma" id="sukuma" value="sukuma">
+                <label for="sukuma">Sukuma</label></br>
+                <input type="checkbox" name="onion" id="onion" value="onion">
+                <label for="onion">Onion</label></br>
+                <input type="checkbox" name="garlic" id="garlic" value="garlic">
+                <label for="garlic">Garlic</label></br>
+                <input type="checkbox" name="tangawizi" id="tangawizi" value="tangawizi">
+                <label for="tangawizi">Tangawizi</label></br>
+              </fieldset>
+            </div>
+          </div>
         </div>
         <div class="col-md-6">
-          <h3>Meat</h3>
-          <fieldset>
-            <input type="checkbox" id="chicken" name="chicken" value="chicken">
-            <label for="chicken">Chicken</label><br>
-            <input type="checkbox" id="bacon" name="bacon" value="bacon">
-            <label for="bacon">Bacon</label><br>
-            <input type="checkbox" id="beef" name="beef" value="beef">
-            <label for="beef">Beef</label><br>
-            <input type="checkbox" id="fish" name="fish" value="fish">
-            <label for="fish">Fish</label><br>
-            <input type="checkbox" id="pork" name="pork" value="pork">
-            <label for="pork">Pork</label><br>
-          </fieldset>
+          <div class="card">
+            <div class="card-title">
+              <h2>Meat</h2>
+            </div>
+            <div class="card-body">
+              <fieldset>
+                <input type="checkbox" id="chicken" name="chicken" value="chicken">
+                <label for="chicken">Chicken</label><br>
+                <input type="checkbox" id="bacon" name="bacon" value="bacon">
+                <label for="bacon">Bacon</label><br>
+                <input type="checkbox" id="beef" name="beef" value="beef">
+                <label for="beef">Beef</label><br>
+                <input type="checkbox" id="fish" name="fish" value="fish">
+                <label for="fish">Fish</label><br>
+                <input type="checkbox" id="pork" name="pork" value="pork">
+                <label for="pork">Pork</label><br>
+              </fieldset>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -111,7 +135,7 @@
     </div> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="../js/recipes.js"></script>
+  <script src="js/recipes.js"></script>
   </body>
 </html>
 
